--- a/sp-share/src/app/app.component.html
+++ b/sp-share/src/app/app.component.html
@@ -1,37 +1,22 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark black ie-nav" [containerInside]="false">
   <mdb-navbar-brand>
-    <a class="logo navbar-brand" href="#"><strong>Navbar</strong></a>
+    <a class="logo navbar-brand" routerLink="/"><strong>Sp-platform</strong></a>
   </mdb-navbar-brand>
   <links>
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active waves-light" mdbWavesEffect>
-        <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item waves-light" mdbWavesEffect>
+        <a class="nav-link">Vulnerabilities</a>
       </li>
       <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link">Features</a>
+        <a class="nav-link">Instructions</a>
       </li>
       <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link">Pricing</a>
-      </li>
-      <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link">Opinions</a>
+        <a class="nav-link">About</a>
       </li>
     </ul>
     <ul class="navbar-nav nav-flex-icons">
       <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link">
-          <mdb-icon fab icon="facebook-f"></mdb-icon>
-        </a>
-      </li>
-      <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link">
-          <mdb-icon fab icon="twitter"></mdb-icon>
-        </a>
-      </li>
-      <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link">
-          <mdb-icon fab icon="instagram"></mdb-icon>
-        </a>
+        <a class="nav-link" routerLink="/login">Sign In</a>
       </li>
     </ul>
   </links>
