--- a/sp-share/src/app/app.component.html
+++ b/sp-share/src/app/app.component.html
@@ -11,7 +11,7 @@
         <a class="nav-link">Instructions</a>
       </li>
       <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link">About</a>
+        <a class="nav-link" routerLink="/about">About</a>
       </li>
     </ul>
     <ul class="navbar-nav nav-flex-icons">
